<resources>
    <string name="app_name">Sleep Sheep</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_name_sleep">BÁO THỨC</string>
    <string name="tab_name_today">THỜI TIẾT</string>
    <string name="tab_name_profile">LỊCH SỬ</string>
    <string name="text_select_time">Chọn thời gian bạn muốn thức</string>
    <string name="pick_time">Thời gian mà bạn nên thức</string>
    <string name="suggest_text_1">Thời gian bạn chọn không tốt để thức dậy!</string>
    <string name="suggest_text_2">Bạn có thể chọn các giờ dưới đây</string>
    <string name="suggest_text_3">Bạn vẫn muốn thức vào giờ đã chọn ?</string>
    <string name="button_hold_to_stop">Đã thức</string>
    <string name="slide_to_stop">Vuốt để kết thúc hoạt động</string>
    <string name="some_thing_went_wrong">Lỗi không hiển thị được thông tin</string>
    <string name="sunrise">Mặt trời mọc</string>
    <string name="sunset">Mặt trời lặn</string>
    <string name="wind">Gió</string>
    <string name="pressure">Áp suất</string>
    <string name="humidity">Độ ẩm</string>
    <string name="min_temp">Thấp</string>
    <string name="max_temp">Cao</string>
    <string name="update_at">Cập nhật lúc</string>
    <string name="request_gps">Thử lại</string>
    <string name="title_list_sleep">Lịch sử ngủ gần đây</string>
</resources>
